- Fixed text processor, since "text:c" attribute for repetition is only allowed   for spaces, not for tabs and line-breaks. - Refactored text processor tests for readability and maintainability.
git-svn-id: https://svn.apache.org/repos/asf/incubator/zetacomponents/trunk@978341 13f79535-47bb-0310-9956-ffa450edef68

--- a/Document/tests/odt/test_data/test_styles.pcss
+++ b/Document/tests/odt/test_data/test_styles.pcss
@@ -24,3 +24,8 @@ emphasis {
 	text-decoration:	underline;
 	background-color:	#00cc00;
 }
+
+literallayout {
+	border:	1px solid #ff0000;
+	font-family:	DejaVuSansMono;
+}
